<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">计算器</string>
    <string name="action_settings">Settings</string>
    <string name="num_zero">0</string>
    <string name="num_one">1</string>
    <string name="num_two">2</string>
    <string name="num_three">3</string>
    <string name="num_four">4</string>
    <string name="num_five">5</string>
    <string name="num_six">6</string>
    <string name="num_seven">7</string>
    <string name="num_eight">8</string>
    <string name="num_nine">9</string>
    <string name="math_add">+</string>
    <string name="math_subtraction">-</string>
    <string name="math_multiplication">x</string>
    <string name="math_division">/</string>
    <string name="math_equals">=</string>
    <string name="math_point">.</string>
    <string name="clear">AC</string>
    <string name="delete">←</string>
    <string name="percent">%</string>
    <string name="minus">±</string>
    
</resources>
